--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -33,6 +33,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
+    "prettier": "^3.2.4",
     "storybook": "^7.6.10",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
